--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a-scene {
       </a-assets>
 
 
-
+  <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
 
         <a-entity id="words" position="0 1.5 -1" intersect-color-change  text="font:monoid; color:white; width:3 0; value:Gravity"></a-entity>
       
