--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ a-scene {
       <a-sky color="grey"></a-sky>
           
  
-          <a-entity light="type: directional; color: #FFF; intensity: 0.8 ; ></a-entity>
+          <a-entity light="type: directional; color: #FFF; intensity: 0.8 ;  position="0 20.5 5" ></a-entity>
 
+ 
 
 
     </a-scene>
