--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a-scene {
 
   <body>
 <h1>Gravity</h1>
-    <a-scene embedded shadow>
+    <a-scene embedded>
       <a-assets>
         <img id="cloth" src="felt.jpg">
         <a-mixin id="felt" material="normalMap:#cloth"></a-mixin>
